# pocket_lab

./: .gitignore  .gitmodules
E53/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
E53/components/e53_lcd/: CMakeLists.txt  lcd_init.c  lcd_st7789v.c
E53/components/e53_lcd/include/: key.h  lcd_bk.h  lcd_init.h  lcd_st7789v.h
E53/components/espressif__button/test_apps/main/: button_test.c
E53/components/espressif__esp32_s3_e5/: .component_hash  CMakeLists.txt  esp32_s3_e53.c  esp32_s3_peripherals.c  idf_component.yml
E53/components/espressif__esp32_s3_e5/include/bsp/: esp32_s3_e53.h
E53/components/logic_analyzer/logic_analyzer_hal/: logic_analyzer_hal.c
E53/components/logic_analyzer/logic_analyzer_hal/include/: logic_analyzer_const_definition.h  logic_analyzer_hal.h  logic_analyzer_pin_definition.h
E53/main/: CMakeLists.txt  idf_component.yml  logic_analyzer_test.c  main.c
E53/main/lab/: CMakeLists.txt  ad_test.c  da_test.c  gpio_test.c  in_driver.c  isr_test.c  pwm_test.c  spi_test.c  uart_test.c  ui_event_backup.c
E53/main/lab/include/: ad_test.h  da_test.h  gpio_test.h  in_driver.h  isr_test.h  lab.h  pwm_test.h  spi_test.h  uart_test.h
E53/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
E53/main/ui/components/: ui_comp_hook.c
E53/main/ui/fonts/: ui_font_symbols16.c
E53/main/ui/images/: ui_img_astronaut10_png.c  ui_img_astronaut11_png.c  ui_img_astronaut12_png.c  ui_img_astronaut13_png.c  ui_img_astronaut14_png.c  ui_img_astronaut1_png.c  ui_img_astronaut2_png.c  ui_img_astronaut3_png.c  ui_img_astronaut4_png.c  ui_img_astronaut5_png.c  ui_img_astronaut6_png.c  ui_img_astronaut7_png.c  ui_img_astronaut8_png.c  ui_img_astronaut9_png.c
E53/main/ui/screens/: ui_adui.c  ui_datetimeui.c  ui_daui.c  ui_gpioui.c  ui_home.c  ui_i2cui.c  ui_isrui.c  ui_pwmui.c  ui_setting.c  ui_spiui.c  ui_timeui.c  ui_uartui.c  ui_wifiset.c
TEST_C6/v1.1_aliyun/: CMakeLists.txt  sdkconfig  sdkconfig.old
TEST_C6/v1.1_aliyun/main/: CMakeLists.txt  i2c_master.c  i2c_master.h  i2c_senor.c  i2c_senor.h  main.c  mytask_list.c  mytask_list.h  user_mqtt.c  user_mqtt.h  wifi_station.c  wifi_station.h
