idf_component_register(SRCS       "user_mqtt.c"
                                  "main.c"
                                  "i2c_master.c" 
                                  "i2c_senor.c"
                                  "wifi_station.c"
                                  "mytask_list.c"
                    INCLUDE_DIRS ".")
